testsuite/tests/properties/invalid_n_propgate/test.out
== bad_arity_1_0/test.lkt ==
test.lkt:4:72: error: At least one argument logic variable (or array thereof) expected
4 |     @ignored fun main_prop(): Equation = node.ref_var <- BazNode.prop1%()
  |                                                                        ^^


== bad_arity_1_2/test.lkt ==
test.lkt:5:9: error: BazNode.prop1 property must accept 1 entity arguments (only 0 found)
5 |         node.ref_var <- BazNode.prop1%(node.type_var, node.type_var)
  |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^


== bad_arity_2_1/test.lkt ==
test.lkt:5:9: error: Missing an actual for argument #1 (e1)
5 |         node.ref_var <- BazNode.prop3%(node.type_var)
  |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^


== bad_arity_dyn_0/test.lkt ==
test.lkt:4:72: error: At least one argument logic variable (or array thereof) expected
4 |     @ignored fun main_prop(): Equation = node.ref_var <- BazNode.prop4%()
  |                                                                        ^^


== bad_arity_dyn_2/test.lkt ==
test.lkt:5:9: error: Logic variable expressions should be grouped at the beginning, and should not appear after non logic variable expressions
5 |         node.ref_var <- BazNode.prop4%([node.type_var], node.type_var)
  |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^


== bad_type_dyn/test.lkt ==
test.lkt:5:9: error: Missing an actual for argument #1 (e1)
5 |         node.ref_var <- BazNode.prop4%(node.type_var)
  |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^


== valid_1/test.lkt ==
Code generation was successful

== valid_2/test.lkt ==
Code generation was successful

== valid_3/test.lkt ==
Code generation was successful

lkt_compile: Done
